# ParallelApplications2

./: .gitignore  README.md  settings.json
common/: CMakeLists.txt
common/CUDA_11-2_SDK/: CMakeLists.txt
common/FreeGlut/: CMakeLists.txt
common/FreeImage/: CMakeLists.txt
common/Glew/: CMakeLists.txt
common/pg/: CMakeLists.txt  benchmark.h  imageManager.h  imageUtils.cuh
src/: CMakeLists.txt  Image.cu  Image.h  competition.cu  cv10.cu  cv10_man0117.cu  cv11.cu  cv12.cu  cv4.cu  cv5.cu  cv5_task_man0117.cu  cv6.cu  cv7.cu  cv8.cu  cv9.cu  imageKernels.cuh  project.cu  runner.cu
